# llm-abm-marketing-sim

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  skills-lock.json
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.omx/experiments/: phase5-live-visual-scorecard.md
.omx/phase-handoffs/: phase-03-provider-adapter.md  phase-04-real-abm-data.md  phase-05-live-llm-visual-evolution.md
.ralph/: current-events  current-loop-id  events-20260514-152810.jsonl  history.jsonl  ralph-history.json  ralph-loop.state.json  ralph-tasks.md
.ralph/agent/: summary.md
.ralph/api/: collections-v1.json
archive/jinjiang-historical-runs-20260623T022534Z/: README.md  archive_manifest.json
configs/: default.yaml  jinjiang-top10-jinjiang-comment-candidates-filtered-20260617T122141Z.json  jinjiang_top10_jinjiang_only_video_metadata_selection.json  jinjiang_top10_non_generic_video_metadata_selection.json  jinjiang_top10_tags_selection.json
configs/deployments/: jinjiang-seed-first-formal-v5-20260723T082223Z.json  jinjiang-seed-first-formal-v6-gpt-5.4-mini-20260723T153415Z.json  jinjiang-seed-first-validation-20260720.json
configs/fixtures/: realistic_marketing_dataset.yaml  toy_dataset.yaml
data/: README.md
data/raw/: README.md
docs/: architecture.md  component-inventory.md  dataset-ingestion.md  development-guide.md  development-plan.md  framework-analysis.md  getting-started-macos.md  index.md  product-demo.md  project-overview.md  project-scan-report.json  provider-config.md  requirements-alignment.md  simulation-flow.md  source-tree-analysis.md  test-strategy.md
scripts/: audit_caption_hashtag_comment_run.py  collect_jinjiang_user_profiles.py  deploy_abm_report.sh  derive_jinjiang_scope_change.py  generate_jinjiang_latent_attributes.py  summarize_jinjiang_topic_distribution.py  validate_abm_report_release.py
tests/: test_rule_based_decision.py
(+201 files in other folders)
