[project]
name = "llm-abm-marketing-sim"
version = "0.1.0"
description = "Lightweight LLM-supported ABM simulator for social-network marketing post diffusion"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "pydantic>=2.0",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
]
llm = ["openai>=1.0"]
mesa = ["mesa>=3.0"]

[project.scripts]
llm-abm-sim = "llm_abm_sim.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".venv",
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".agents",
  "_bmad",
  "runs",
  "test-results",
  "playwright-report",
  "node_modules",
  "src/llm_abm_marketing_sim.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["llm_abm_sim"]
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: fast isolated tests",
  "integration: component interaction tests",
  "e2e: end-to-end workflow tests",
  "live_llm: manual live LLM/provider gate; skipped unless explicitly opted in",
]
addopts = "-m 'not live_llm'"
